Desktop pager can be toggled with hot key of menu item

--- a/DesktopManager/trunk/DesktopManager/Resources/en_GB.lproj/HotKeyDescriptions.strings
+++ b/DesktopManager/trunk/DesktopManager/Resources/en_GB.lproj/HotKeyDescriptions.strings
@@ -7,4 +7,4 @@ move_to_upper_ws = "Switch one desktop up";
 move_to_lower_ws = "Switch one desktop down";
 move_to_next_ws = "Switch to next desktop";
 move_to_prev_ws = "Switch to previous desktop";
-show_desktop_pager = "Show pager window";
+show_desktop_pager = "Toggle desktop pager";
